# Automated-Attendance-System-Backend_v.01

./: CMakeLists.txt  Doxyfile  README.md
html/: annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8h.html  app_8h__dep__incl.map  app_8h__dep__incl.md5  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  attendance_8cpp.html  attendance_8cpp__incl.map  attendance_8cpp__incl.md5  attendance_8h.html  attendance_8h__dep__incl.map  attendance_8h__dep__incl.md5  attendance_8h__incl.map  attendance_8h__incl.md5  attendance_8h_source.html  classApp-members.html  classApp.html  classAttendanceManager-members.html  classAttendanceManager.html  classImageVerifier-members.html  classImageVerifier.html  classUserManager-members.html  classUserManager.html  classes.html  db_8cpp.html  db_8cpp__incl.map  db_8cpp__incl.md5  db_8h.html  db_8h__dep__incl.map  db_8h__dep__incl.md5  db_8h__incl.map  db_8h__incl.md5  db_8h_source.html  demo_8cpp.html  demo_8cpp__incl.map  demo_8cpp__incl.md5  (+31 more)
include/: app.h  attendance.h  db.h  image_verifier.h  user.h
latex/: annotated.tex  app_8cpp.tex  app_8cpp__incl.md5  app_8h.tex  app_8h__dep__incl.md5  app_8h__incl.md5  app_8h_source.tex  attendance_8cpp.tex  attendance_8cpp__incl.md5  attendance_8h.tex  attendance_8h__dep__incl.md5  attendance_8h__incl.md5  attendance_8h_source.tex  classApp.tex  classAttendanceManager.tex  classImageVerifier.tex  classUserManager.tex  db_8cpp.tex  db_8cpp__incl.md5  db_8h.tex  db_8h__dep__incl.md5  db_8h__incl.md5  db_8h_source.tex  demo_8cpp.tex  demo_8cpp__incl.md5  files.tex  (+16 more)
(+29 files in other folders)
